2008-11-16  Jonathan Larmour  <jifl@eCosCentric.com>

	* cdl/redboot.cdl, src/flash.c, src/fconfig.c:
	Flash-related eCosCentric changes to these files (including a
	merge of the flashv2 work) have been merged. Changes have been
	directly interleaved below on the correct dates.

2008-11-14  Jonathan Larmour  <jifl@eCosCentric.com>

	* src/flash.c (fis_lock): Revert patch of 2005-10-05 which disabled
	locking entirely if FIS was disabled. Was better fixed by patch of
	2006-02-17.
	(fis_list): Revert patch of 2007-04-03 to avoid skipping entries
	at 0x0. Replaced by anoncvs patch of 2007-06-02 for consistency.

2008-09-11  Nick Garnett  <nickg@ecoscentric.com>

	* src/flash.c (fis_create, fis_write, fis_erase): Change alignment
	test to cope with flash blocks that are not a power of 2 in size.

2008-06-18  Bart Veer  <bartv@ecoscentric.com>

	* src/fconfig.c, src/flash.c, src/io.c, src/load.c, src/main.c,
  	src/xyzModem.c, include/redboot.h: more signed vs. unsigned char
	issues. 

2008-05-20  Jonathan Larmour  <jifl@eCosCentric.com>

	* src/fs/e2fs.c (e2fs_mount): Avoid compiler strict aliasing
	problem.

	* include/fis.h (struct fis_image_desc): Make fis name be
	signed char to reduce warnings.
	* include/flash_config.h (struct _config): Make config_data
	be signed char to reduce warnings.
	* include/redboot.h: mon_write_char and mon_read_char_with_timeout
	take unsigned char, to reduce warnings.
	* src/parse.c: Add const to err_printf format.
	* src/fconfig.c: Many signed/unsigned warning cleanups.
	* src/io.c: Ditto.
	* src/xyzModem.c: Ditto.
	* src/load.c: Ditto.
	* src/flash.c: Ditto.

2007-11-21  Jonathan Larmour  <jifl@eCosCentric.com>

	* src/flash.c (fis_create): Allow length to be inferred if same
	mem address given as prior load address.

2007-08-28  Gary Thomas  <gary@mlbassoc.com>

	* src/flash.c (do_flash_init): Memory allocation was slightly
	incorrect - 'workspace_end' should always be used to find 
	the end of available memory.
